kubernetes/applications/paperless-ngx/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx

  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/part-of: paperless-ngx

    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:3.0.4
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data

            - name: media
              mountPath: /usr/src/paperless/media

            - name: export
              mountPath: /usr/src/paperless/export

            - name: consume
              mountPath: /usr/src/paperless/consume

          startupProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: paperless.prod.everlab.dev
            periodSeconds: 10
            failureThreshold: 60
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: paperless.prod.everlab.dev
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: paperless.prod.everlab.dev
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
            timeoutSeconds: 5

          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data

        - name: media
          persistentVolumeClaim:
            claimName: paperless-media

        - name: export
          persistentVolumeClaim:
            claimName: paperless-export

        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume
