kubernetes/applications/paperless-ngx/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: paperless-ngx

  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
